testfx/errors/error_tests/edge_04_var_keyword.fx
// 测试: 使用 JS 的 var 关键字
var x = 10
println(x)
